Add workspace configuration and initial app.yaml for songs module
- Created a new workspace configuration file for the project.
- Added an app.yaml file to include the songs-list.

--- a/site.yaml
+++ b/site.yaml
@@ -14,6 +14,7 @@ author: Pardon My French
 favicon: /img/favicon.jpg
 description: Projet Collaboratif Incongru - BAISE OUAIS ! 24/24 NON ARRETE PARTIE !
 port: 8083
+content_collection: songs
 
 # OG image
 origin: https://www.pardon-my-french.fr
